--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "three": "^0.171.0",
+        "@gotoeasy/three-tile": "^0.8.7",
         "@tweenjs/tween.js": "^25.0.0",
-        "@gotoeasy/three-tile": "^0.8.7"
+        "three": "^0.171.0"
     },
     "devDependencies": {
         "@types/node": "^22.13.5",
