--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@reall3d/reall3dviewer",
-    "version": "0.0.6",
+    "version": "0.0.8",
     "type": "module",
     "files": [
         "dist"
@@ -16,7 +16,7 @@
         },
         "./dist/style.css": "./dist/style.css"
     },
-    "dependencies": {
+    "peerDependencies": {
         "@gotoeasy/three-tile": "^0.8.7",
         "@tweenjs/tween.js": "^25.0.0",
         "three": "^0.171.0"
