--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "less": "^4.2.2",
         "typescript": "^5.6.3",
         "vite": "^6.1.1",
+        "vite-plugin-dts": "^4.5.4",
         "vite-plugin-svg-icons": "^2.0.1"
     }
 }
