--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "typescript": "^5.6.3",
         "vite": "^6.1.1",
         "vite-plugin-dts": "^4.5.4",
+        "vite-plugin-glsl": "^1.4.2",
         "vite-plugin-svg-icons": "^2.0.1"
     }
 }
